Set WDL live now banner/homepage promo

--- a/src/content/en/styles/wf-landing.css
+++ b/src/content/en/styles/wf-landing.css
@@ -169,3 +169,7 @@
 .cds-blue {
   color: #039be5;
 }
+
+.goog-font {
+  font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
+}
