Add Racial Equality banner

--- a/src/content/en/styles/wf-landing.css
+++ b/src/content/en/styles/wf-landing.css
@@ -103,9 +103,10 @@
 }
 
 /* hide banner from landing */
-.hide-devsite-banner .devsite-banner {
+/* Removed for BLM Banner */
+/* .hide-devsite-banner .devsite-banner {
   display: none;
-}
+} */
 
 @media screen and (min-width: 900px) {
 
