--- a/src/content/en/styles/wf-landing.css
+++ b/src/content/en/styles/wf-landing.css
@@ -108,69 +108,14 @@
   display: none;
 } */
 
-@media screen and (min-width: 900px) {
-
-  .wf-cds-banner {
-    background-image: url('/web/images/cds18-banner-img.png');
-    background-repeat: no-repeat;
-    background-position: right;
-    background-origin: content-box;
-    background-size: auto 135%;
-  }
-
-  .wf-cds-banner .devsite-landing-row-item-description {
-    max-width: 40%;
-  }
-
-  .wf-cds-banner h3 {
-    margin-bottom: 16px !important;
-  }
-}
-
-.cds2019 h3 {
-  /* padding: 16px;
-  background-color: white;
-  box-shadow: 40px 35px 66px 0px rgba(204,204,204,0.75);
-  border-radius: 16px; */
-}
-
-.cds2019 h3 > img {
-  display: inline-block;
-  max-width: 48px;
-  vertical-align: top;
-  margin-right: 0.5em;
-  /* margin-top: 22px; */
-}
-
-.cds2019 h3 > div {
-  display: inline-block;
-}
-
-.cds-header {
-  font-weight: bold;
-}
-
-.cds-dates sup {
-  font-size: medium;
-}
-
-.cds-loc {
-  margin-top: 1em;
-}
-
-.cds-loc, .cds-city {
-  font-size: 0.75em;
-  line-height: 1.2em;
-}
-
-.cds-cr {
-  color:#999;
-}
-
-.cds-blue {
-  color: #039be5;
-}
-
 .goog-font {
   font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
+}
+
+.cds20-marquee-margin-fix header.devsite-landing-row-header {
+  display: none;
+}
+
+.cds20-marquee-margin-fix .devsite-landing-row-group {
+  margin-top: 0 !important;
 }
