Make buttons red

--- a/src/content/en/styles/wf-landing.css
+++ b/src/content/en/styles/wf-landing.css
@@ -119,3 +119,7 @@
 .cds20-marquee-margin-fix .devsite-landing-row-group {
   margin-top: 0 !important;
 }
+
+.cds20-now {
+  background-color: #EA4335 !important;
+}
